// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.reporting;

option java_package = "org.wfanet.measurement.config.reporting";
option java_multiple_files = true;

message EncryptionKeyPairConfig {
  // Files for a pair of public / private key.
  message KeyPair {
    string public_key_file = 1;
    string private_key_file = 2;
  }
  // The list of key pairs for a principal.
  message PrincipalKeyPairs {
    string principal = 1;
    repeated KeyPair key_pairs = 2;
  }
  repeated PrincipalKeyPairs principal_key_pairs = 1;
}
